# Project_Aztrogent

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  langgraph.json  pyproject.toml
notebooks/: calendar_agent.ipynb  email_agent.ipynb  github_agent.ipynb  linkedin_agent.ipynb  personal_agent.ipynb  update_memory.ipynb
src/: settings.py
src/aztrogent_agent/: __init__.py  configuration.py  graph.py  nodes.py  prompts.py  state.py  tools.py
src/calendar_agent/: __init__.py  configuration.py  graph.py  models.py  nodes.py  prompts.py  state.py  tools.py
src/email_agent/: __init__.py  configuration.py  graph.py  models.py  nodes.py  prompts.py  state.py  tools.py
src/github_agent/: __init__.py  configuration.py  graph.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
src/linkedin_agent/: __init__.py  configuration.py  graph.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
src/react_agent/: configuration.py  graph.py  nodes.py  prompts.py  state.py  tools.py
tests/integration_tests/: test_graph.py
