[project]
name = "Personal-Agent"
version = "0.0.1"
description = "A Personal AI Agent to get tasks done."
authors = [
    { name = "Aasher Kamal", email = "aasherkamal786@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.17",
    "tavily-python>=0.4.0",
    "langgraph-cli[inmem]>=0.1.70",
    "ipykernel>=6.29.5",
    "langchain-groq>=0.2.4",
    "langchain-google-genai>=2.0.9",
    "google-generativeai>=0.8.4",
    "composio-langgraph>=0.7.1",
    "langgraph-supervisor>=0.0.1",
    "langmem>=0.0.9",
    "langchain-cohere>=0.4.2",
    "rich>=13.9.4",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aztrogent_agent", "email_agent", "linkedin_agent", "github_agent", "calendar_agent"]
[tool.setuptools.package-dir]
"aztrogent_agent" = "src/aztrogent_agent"
"email_agent" = "src/email_agent"
"linkedin_agent" = "src/linkedin_agent"
"github_agent" = "src/github_agent"
"calendar_agent" = "src/calendar_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
